chore: env config

--- a/challenge-charlie-frontend/public/index.html
+++ b/challenge-charlie-frontend/public/index.html
@@ -3,7 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
+        <!-- Chrome, Firefox OS and Opera -->
+        <meta name="theme-color" content="#ddb310" />
+        <!-- Windows Phone -->
+        <meta name="msapplication-navbutton-color" content="#ddb310" />
+        <!-- iOS Safari -->
+        <meta name="apple-mobile-web-app-status-bar-style" content="#ddb310" />
         <meta
             name="description"
             content="Veja o clima atual e nos próximos dias em sua cidade..."
