--- a/challenge-charlie-frontend/public/index.html
+++ b/challenge-charlie-frontend/public/index.html
@@ -13,6 +13,10 @@
             name="description"
             content="Veja o clima atual e nos próximos dias em sua cidade..."
         />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+        />
         <title>Challenge Charlie</title>
     </head>
     <body>
